feat: 实现档期预约模块
新增功能：
- 日历视图组件 CalendarView（自定义日历，月份导航，档期标记）
- 档期卡片 ScheduleCard（显示时间、客户、状态、操作按钮）
- 预约卡片 RequestCard（客户偏好日期，接受/拒绝按钮）
- 状态筛选器 StatusFilter（全部/待确认/已确认/已完成/已取消）
- 空状态组件 EmptyState

主页面功能：
- 日历视图展示档期分布
- Tab 切换（档期列表/预约申请）
- 档期状态筛选
- 确认档期、接受/拒绝预约交互

数据文件：
- schedules.json（5 条档期数据）
- requests.json（3 条预约申请数据）

更新文档：
- 项目功能和设计.md（补充 To-Do List 和进度跟踪）

--- a/项目功能和设计.md
+++ b/项目功能和设计.md
@@ -1,43 +1,363 @@
-# 镜头流 (LensFlow) 小程序开发指令 (Prompt)
+# 镜头流 (LensFlow) 小程序开发文档
 
-**目标**：请根据以下规格说明，为我构建一个面向“独立摄影师”的轻量级 CRM 小程序前端原型。
+**目标**：面向"独立摄影师"的轻量级 CRM 小程序
+
+**版本**：v1.0.0
+
+**状态**：开发中
+
+---
 
 ## 1. 视觉风格指南 (UI Style)
 
-- **设计语言**：极致简约、画廊感、高端摄影画册风格。
-- **配色方案**：深色模式（背景：#121212，文字：#FFFFFF/E0E0E0）。
-- **交互细节**：使用毛玻璃效果（Glassmorphism）的底栏，图片切换要有平滑的淡入淡出动效。
-- **字体**：系统默认细体，配合衬线体标题。
+- **设计语言**：极致简约、画廊感、高端摄影画册风格
+- **配色方案**：深色模式（背景：#121212，文字：#FFFFFF/E0E0E0）
+- **交互细节**：使用毛玻璃效果（Glassmorphism）的底栏，图片切换要有平滑的淡入淡出动效
+- **字体**：系统默认细体，配合衬线体标题
+
+---
 
 ## 2. 核心页面结构
 
-### 页面一：摄影师管理端首页 (Dashboard)
+### 2.1 摄影师管理端首页 (Dashboard)
 
-- **顶部栏**：展示摄影师 Logo、店名及极简数据面板（今日拍摄、待修图数）。
-- **金刚区**：四个大卡片按钮（风格管理、档期预约、项目订单、交付中心）。
-- **活动流**：纵向时间轴展示客户动态（如：某客户已选风格、某客户已付定金）。
-- **悬浮按钮 (FAB)**：右下角一个 `+` 号按钮，点击弹出“生成风格确认链接”。
+**状态**：✅ 已完成
 
-### 页面二：客户侧-风格确认落地页 (Moodboard Selection)
+**核心功能**：
+- **顶部栏**：展示摄影师 Logo、店名及极简数据面板
+  - 今日拍摄数
+  - 待修图数
+  - 待交付项目数
+- **金刚区**：四个大卡片按钮
+  - 档期预约
+  - 项目订单
+  - 交付中心
+  - 风格管理（占位）
+- **活动流**：纵向时间轴展示客户动态
+  - 客户选择风格
+  - 客户支付定金
+  - 客户确认交付
+- **悬浮按钮 (FAB)**：右下角 `+` 号按钮
+  - 生成风格确认链接
+  - 创建新订单
+  - 添加档期
 
-- **Cover Page**：满屏大图，带有“向下滑动开启审美之旅”的引导提示。
+**组件结构**：
+```
+pages/photographer/dashboard/
+├── index.vue                    # 主页面
+└── components/
+    ├── DashboardHeader.vue      # 顶部栏 + 数据面板
+    ├── StatCard.vue            # 统计卡片
+    ├── QuickAction.vue         # 金刚区卡片
+    ├── ActivityTimeline.vue    # 活动时间轴
+    └── FabButton.vue           # 悬浮按钮
+```
+
+---
+
+### 2.2 客户侧-风格确认落地页 (Moodboard Selection)
+
+**状态**：✅ 已完成
+
+**核心功能**：
+- **Cover Page**：满屏大图，带有"向下滑动开启审美之旅"的引导提示
 - **沉浸式列表**：
-  - **风格组卡片**：每组包含 1-2 张代表作，非对称排版。
-  - **选择逻辑**：点击图片即选中，再次点击取消。右上角显示优雅的勾选图标。
-  - **计数限制**：底部固定栏显示“已选 n 组风格”，并有确认提交按钮。
-- **全屏详情交互**：点击风格组卡片可进入该风格的详情横滑图库。
+  - 风格组卡片：每组包含 1-2 张代表作，非对称排版
+  - 选择逻辑：点击图片即选中，再次点击取消
+  - 右上角显示优雅的勾选图标
+  - 呼吸灯边框效果（选中状态）
+  - 计数限制：底部固定栏显示"已选 n 组风格"
+  - 确认提交按钮
+- **全屏详情交互**：点击风格组卡片可进入该风格的详情横滑图库
 
-## 3. 技术栈建议
+**组件结构**：
+```
+pages/client/moodboard/
+├── index.vue                    # 主页面
+└── components/
+    ├── CoverPage.vue           # 沉浸式封面
+    ├── StyleCard.vue           # 风格卡片
+    ├── GalleryDetail.vue       # 图库详情弹窗
+    └── FixedBar.vue            # 底部固定栏
+```
 
-- **框架**：Uni-app 或微信原生开发。
-- **样式**：使用 Tailwind CSS 或 SCSS 快速构建样式。
-- **后端（模拟）**：先使用本地 JSON 数据模拟风格库和项目列表。
+---
 
-## 4. Claude 第一步任务描述
+## 3. 待开发功能页面
 
-> "请先帮我实现**客户侧-风格确认落地页**。要求：
->
-> 1. 首页是一个满屏的沉浸式封面。
-> 2. 向下滚动后进入风格列表，每组风格由一个大标题和两张错位排列的图片组成。
-> 3. 点击图片时，图片边缘要有一个呼吸灯效果的边框或勾选标识。
-> 4. 请使用 Vue (Uni-app) 或原生微信小程序代码编写，并确保 UI 极其接近高端摄影 App 的质感。"
+### 3.1 档期预约 (Schedule)
+
+**状态**：⏸️ 占位页面
+
+**计划功能**：
+- 日历视图展示档期
+- 预约申请列表
+- 档期冲突检测
+- 预约确认/拒绝
+- 档期提醒设置
+
+---
+
+### 3.2 项目订单 (Orders)
+
+**状态**：⏸️ 占位页面
+
+**计划功能**：
+- 订单列表（全部/进行中/已完成）
+- 订单详情查看
+- 订单状态跟踪
+- 订单搜索与筛选
+- 订单备注管理
+
+---
+
+### 3.3 交付中心 (Delivery)
+
+**状态**：⏸️ 占位页面
+
+**计划功能**：
+- 批量上传作品
+- 生成分享链接
+- 设置下载密码
+- 客户下载统计
+- 交付确认管理
+
+---
+
+## 4. 技术栈
+
+- **框架**：Uni-app + Vue 3 (Composition API)
+- **样式**：SCSS + CSS 变量主题系统
+- **后端（模拟）**：本地 JSON 数据模拟
+
+---
+
+## 5. 项目结构
+
+```
+LensFlow/
+├── src/
+│   ├── pages/
+│   │   ├── photographer/              # 摄影师端
+│   │   │   └── dashboard/             # 工作台 ✅
+│   │   ├── schedule/                  # 档期预约 ⏸️
+│   │   ├── orders/                    # 项目订单 ⏸️
+│   │   ├── delivery/                  # 交付中心 ⏸️
+│   │   └── client/                    # 客户端
+│   │       └── moodboard/             # 风格确认 ✅
+│   ├── mock-data/                     # 模拟数据
+│   │   ├── styles.json                # 风格库
+│   │   ├── activities.json            # 活动流
+│   │   └── dashboard-stats.json       # 统计数据
+│   ├── styles/
+│   │   └── theme.css                  # 全局主题
+│   ├── App.vue
+│   ├── main.js
+│   ├── pages.json                     # 页面配置
+│   └── manifest.json                  # 应用配置
+└── dist/                              # 编译输出
+```
+
+---
+
+## 6. 数据模型
+
+### 6.1 风格数据模型
+
+```javascript
+{
+  id: 'style_001',
+  title: '法式浪漫',
+  coverImage: '封面图URL',
+  images: ['图片URL数组'],
+  description: '风格描述',
+  tags: ['标签数组']
+}
+```
+
+### 6.2 活动流数据模型
+
+```javascript
+{
+  id: 'act_001',
+  type: 'style_selected' | 'payment' | 'delivery_confirmed' | 'appointment',
+  clientName: '林小姐',
+  action: '选择了风格',
+  detail: '法式浪漫',
+  time: '10分钟前',
+  avatar: '头像URL'
+}
+```
+
+### 6.3 统计数据模型
+
+```javascript
+{
+  todayShooting: 2,      // 今日拍摄数
+  pendingEdit: 8,        // 待修图数
+  pendingDelivery: 5     // 待交付数
+}
+```
+
+---
+
+## 7. 待办事项清单 (To-Do List)
+
+### 7.1 高优先级 (P0) - 核心业务功能
+
+| 功能模块 | 任务 | 状态 | 预计工时 |
+|---------|------|------|---------|
+| **档期预约** | 实现日历视图 | ⏳ 待开发 | 4h |
+| **档期预约** | 预约列表与状态管理 | ⏳ 待开发 | 3h |
+| **档期预约** | 档期冲突检测逻辑 | ⏳ 待开发 | 2h |
+| **项目订单** | 订单列表页面 | ⏳ 待开发 | 3h |
+| **项目订单** | 订单详情页 | ⏳ 待开发 | 2h |
+| **项目订单** | 订单状态跟踪 | ⏳ 待开发 | 2h |
+| **交付中心** | 文件上传功能 | ⏳ 待开发 | 4h |
+| **交付中心** | 生成分享链接 | ⏳ 待开发 | 2h |
+| **交付中心** | 交付确认流程 | ⏳ 待开发 | 2h |
+
+**小计**：9 项任务，预计 24 小时
+
+---
+
+### 7.2 中优先级 (P1) - 增强功能
+
+| 功能模块 | 任务 | 状态 | 预计工时 |
+|---------|------|------|---------|
+| **风格管理** | 风格库管理后台 | ⏳ 待开发 | 4h |
+| **风格管理** | 上传/编辑风格样本 | ⏳ 待开发 | 3h |
+| **消息通知** | 客户动态实时推送 | ⏳ 待开发 | 3h |
+| **消息通知** | 消息中心页面 | ⏳ 待开发 | 2h |
+| **数据统计** | 业务数据报表 | ⏳ 待开发 | 4h |
+| **数据统计** | 图表可视化 | ⏳ 待开发 | 3h |
+| **用户系统** | 摄影师注册/登录 | ⏳ 待开发 | 3h |
+| **用户系统** | 客户信息管理 | ⏳ 待开发 | 2h |
+
+**小计**：8 项任务，预计 24 小时
+
+---
+
+### 7.3 低优先级 (P2) - 优化与扩展
+
+| 功能模块 | 任务 | 状态 | 预计工时 |
+|---------|------|------|---------|
+| **性能优化** | 图片懒加载优化 | ⏳ 待开发 | 2h |
+| **性能优化** | 虚拟列表优化 | ⏳ 待开发 | 2h |
+| **交互优化** | 页面转场动画 | ⏳ 待开发 | 2h |
+| **交互优化** | 骨架屏加载 | ⏳ 待开发 | 1h |
+| **分享功能** | 生成分享海报 | ⏳ 待开发 | 3h |
+| **分享功能** | 小程序码生成 | ⏳ 待开发 | 1h |
+| **支付功能** | 微信支付接入 | ⏳ 待开发 | 4h |
+| **支付功能** | 定金收取流程 | ⏳ 待开发 | 2h |
+
+**小计**：8 项任务，预计 17 小时
+
+---
+
+### 7.4 功能完善 (Fix & Polish)
+
+| 任务 | 说明 | 状态 |
+|------|------|------|
+| 适配不同机型 | 测试 iPhone/Android 不同尺寸 | ⏳ 待测试 |
+| 深色模式完善 | 确保所有页面深色主题一致 | ⏳ 待检查 |
+| 无障碍支持 | 添加 aria 标签支持 | ⏳ 待开发 |
+| 错误处理 | 添加友好的错误提示 | ⏳ 待完善 |
+| 网络异常处理 | 断网提示与重试机制 | ⏳ 待开发 |
+
+---
+
+## 8. 开发进度总览
+
+### 8.1 完成度统计
+
+| 模块 | 完成度 | 页面数 |
+|------|--------|--------|
+| 摄影师工作台 | ✅ 100% | 1/1 |
+| 客户风格确认 | ✅ 100% | 1/1 |
+| 档期预约 | ⏸️ 10% | 0/1 (占位) |
+| 项目订单 | ⏸️ 10% | 0/1 (占位) |
+| 交付中心 | ⏸️ 10% | 0/1 (占位) |
+| **总计** | **30%** | **2/5** |
+
+### 8.2 时间规划
+
+| 阶段 | 内容 | 预计时间 |
+|------|------|---------|
+| **第一阶段** | ✅ 原型开发（已完成） | 已完成 |
+| **第二阶段** | 核心业务功能开发 | 24h |
+| **第三阶段** | 增强功能开发 | 24h |
+| **第四阶段** | 优化与扩展 | 17h |
+| **总计** | - | **65h+** |
+
+---
+
+## 9. 下一步开发计划
+
+### 9.1 近期任务（本周）
+
+1. **档期预约模块**
+   - [ ] 实现日历组件
+   - [ ] 预约列表展示
+   - [ ] 预约详情页
+   - [ ] 预约确认/取消功能
+
+2. **项目订单模块**
+   - [ ] 订单列表页
+   - [ ] 订单状态筛选
+   - [ ] 订单详情页
+   - [ ] 订单备注功能
+
+3. **交付中心模块**
+   - [ ] 文件选择与上传
+   - [ ] 分享链接生成
+   - [ ] 交付确认流程
+   - [ ] 下载统计展示
+
+### 9.2 中期计划（本月）
+
+- 风格管理后台
+- 消息通知系统
+- 数据统计分析
+- 用户注册登录
+
+### 9.3 长期规划
+
+- 支付功能接入
+- 分享海报生成
+- 性能优化
+- 多端适配
+
+---
+
+## 10. 技术债务
+
+| 项目 | 说明 | 优先级 |
+|------|------|--------|
+| API 对接 | 当前使用 Mock 数据，需要对接真实后端 API | P0 |
+| 状态管理 | 考虑引入 Pinia 进行全局状态管理 | P1 |
+| 组件库 | 抽取通用组件到全局组件库 | P1 |
+| 单元测试 | 添加核心组件的单元测试 | P2 |
+| 文档完善 | 补充组件使用文档和 API 文档 | P2 |
+
+---
+
+## 附录：快速启动指南
+
+### 安装依赖
+```bash
+npm install --legacy-peer-deps
+```
+
+### 开发模式
+```bash
+npm run dev:mp-weixin
+```
+
+### 微信开发者工具
+导入目录：`dist/dev/mp-weixin`
+
+---
+
+**文档更新时间**：2024-01-07
